Versión 2.0 del Blog
Se agregaron algunos id's para identificar mejor a los labels y los forms

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
         <a href="#inicio" style="color: hsl(255, 83%, 61%);">Volver al inicio</a>
         <br>
         <a href="mailto:oarjalejandro@gmail.com" style="color: hsl(255, 83%, 61%);">Mandar correo a Alejandro</a>
+        <br>
+        <a href="Contacto.html" style="color: hsl(255, 83%, 61%);">Quejas y comentarios</a>
     </div>
-    <a href="Contacto.html">Quejas y comentarios</a>
 </body>
 <div id="foot-er">
     <br><br>
